--- a/SEA_Application/Views/Account/Login.cshtml
+++ b/SEA_Application/Views/Account/Login.cshtml
@@ -1,6 +1,7 @@
 ﻿@{ 
     Layout = "~/Views/Shared/_LayoutPage_Login.cshtml";
 }
+
 @*@using SEA_Application.Models
 @model LoginViewModel
 @{
@@ -195,7 +196,7 @@
 
 
                 <div class="col-md-8 col-lg-8 col-sm-8 split-layout-right">
-                    <img style="width:120%;height:100%" src="~/Content/Images/co.jpg" />
+                    <img style="width:100%;height:100%" src="~/Content/Images/oalogo.jpeg" />
                 </div>
             </div>
         </div>
