--- a/SEA_Application/Content/assets/css/style.css
+++ b/SEA_Application/Content/assets/css/style.css
@@ -16,7 +16,6 @@ body{
 /*     background-image: url('https://f0.pngfuel.com/png/711/104/white-square-shape-on-white-background-computer-icons-arrow-down-arrow-up-right-left-up-up-arrow-png-clip-art.png'); */
 }
 
-input[readonly]{ background-color: #fff !important; }
 
 body * {
     font-family: 'Poppins', sans-serif;
@@ -564,4 +563,204 @@ strong {
     color: #fff !important;
     font-weight: 600 !important;
     border-radius: 4px;
+}
+
+
+.column-heading.wizard-heading {
+    font-size: 24px;
+}
+
+
+
+/*--------WIZARD-----*/
+/*#regForm {
+    background-color: #ffffff;
+    margin: 100px auto;
+
+    padding: 40px;
+    width: 70%;
+    min-width: 300px;
+}
+
+h1 {
+    text-align: center;
+}
+
+input {
+    padding: 10px;
+    width: 100%;
+    font-size: 17px;
+
+    border: 1px solid #aaaaaa;
+}*/
+
+/* Mark input boxes that gets an error on validation: */
+/*input.invalid {
+    background-color: #ffdddd;
+}*/
+
+/*button {
+    background-color: #4CAF50;
+    color: #ffffff;
+    border: none;
+    padding: 10px 20px;
+    font-size: 17px;
+
+    cursor: pointer;
+}
+button:hover {
+    opacity: 0.8;
+}
+#prevBtn {
+    background-color: #bbbbbb;
+}*/
+
+/* Hide all steps by default: */
+.tab {
+    display: none;
+}
+/* Make circles that indicate the steps of the form: */
+.step {
+    height: 15px;
+    width: 15px;
+    margin: 0 15px;
+    /*background-color: #bbbbbb;*/
+    /*border: none;*/
+    border-radius: 50%;
+    display: inline-block;
+    /*opacity: 0.5;*/
+}
+.step.active {
+    opacity: 1;
+}
+
+/* Mark the steps that are finished and valid: */
+.step.finish {
+    background-color: #4CAF50;
+}
+
+
+
+#prevBtn {
+    color: #afbccc !important;
+}
+#createLessonForm .step {
+    font-size: 12px;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 21px;
+    text-align: center;
+    color: #afbccc;
+}
+#createLessonForm .step {
+    width: 24px;
+    height: 24px;
+    background-color: #ffffff;
+    border: solid 1px rgba(0, 0, 0, 0.1);
+    opacity: 1;
+}
+#createLessonForm .step.active {
+    width: 26px;
+    height: 26px;
+      border: solid 2px #ffffff;
+    background-color: #3cd876;
+    color: #ffffff;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+
+}
+#createLessonForm .step.finish {
+    width: 26px;
+    height: 26px;
+      border: solid 2px #ffffff;
+    color: #ffffff;
+    background-color: #3cd876;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+}
+#createLessonForm .step.finish.active {
+    /*background-image: none;*/
+}
+
+
+
+
+/*#createLessonForm .step + .step::before {*/
+/*    content: '';*/
+/*}*/
+.stepsCon {
+    position: relative;
+    display: inline-block;
+    z-index: 6;
+}
+.stepsCon::before {
+    content: '';
+    background-color: rgba(0, 0, 0, 0.1);
+    height: 1px;
+    width: calc(100% - 50px);
+    position: absolute;
+    left: 25px;
+    top: calc(50%);
+    z-index: -4;
+}
+.step.finish {
+    background-image: url(../../assets/assets/icons/finish.png);
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.tab .leftCol .form-group {
+    margin-top: 30px !important;
+}
+.tab .leftCol .input-group .form-group {
+    margin-top: 5px !important;
+}
+.file-field label {
+    font-weight: 500;
+    font-size: 12px;
+}
+
+/*--------WIZARD-----*/
+
+@media screen and (max-width: 767px) {
+    .tab > .row > .col-md-6.pl-5.pr-5 {
+        padding-left: 0 !important;
+    }
+}
+
+
+.subject-list-box {
+    border: 3px solid #f2f5fa;
+    transition: background-color 0.2s ease, border 0.2s ease, scale 0.2s ease;
+    /*transition: all 0.5s ease;*/
+    background-color: #f2f5fa;
+    min-height: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    font-stretch: normal;
+    font-style: normal;
+    color: #141437;
+    line-height: 1.56;
+    text-align: center;
+}
+.subject-list-box:hover {
+    color: #ffffff;
+    box-shadow: 2px 6px 12px 0 rgba(0, 0, 0, 0.16);
+    border: solid 3px #ffffff;
+    background-color: #00b8ec;
+    scale: 1.03;
+}
+.subject-list-box:focus,
+.subject-list-box:active{
+    background-color: #00a0cd;
+    color: #ffffff;
+    scale: 1.02;
+    border: solid 3px #ffffff;
+    box-shadow: 2px 6px 12px 0 rgba(0, 0, 0, 0.16);
+}
+.subject-list-box{ margin-bottom: 25px; }
+
+@media screen and (max-width: 991px) {
+    .subject-list-box{ margin-bottom: 25px; }
 }
