--- a/SEA_Application/Views/AspNetOrderNotes/Index.cshtml
+++ b/SEA_Application/Views/AspNetOrderNotes/Index.cshtml
@@ -76,7 +76,7 @@
         <thead>
             <tr>
                 <th>
-                    @Html.DisplayNameFor(model => model.Id)
+                    ID
                 </th>
                 <th>
                     @Html.DisplayNameFor(model => model.Title)
@@ -85,17 +85,17 @@
                     @Html.DisplayNameFor(model => model.Description)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.CourseType)
+                   Course Type
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.NotesType)
+                  Notes Type
                 </th>
                 <th>
                     Price
                 </th>
 
                 <th>
-                    @Html.DisplayNameFor(model => model.AspNetSubject.SubjectName)
+                    Subject Name
                 </th>
                 <th></th>
 
